# Multivariate_Polynomials

./: CMakeLists.txt  GroebnerBasis.cpp  GroebnerBasis.h  Lagrange.cpp  Lagrange.h  LagrangeSelector.cpp  LagrangeSelector.h  LinearInterpolationProblem.cpp  LinearInterpolationProblem.h  Multiindex.cpp  Multiindex.h  README.md  point.cpp  point.h  polynomial.cpp  polynomial.h  transform.cpp  transform.h
Geometry/: ConvexHull2D.cpp  ConvexHull2D.h  point.cpp  point.h  transform.cpp
GoogleTest/: CMakeLists.txt  ConvexHullTest.cpp  GroebnerTest.cpp  LinearInterpolationProblemTests.cpp  MultiindexTests.cpp  Neeza_scratch.cpp  PointTests.cpp  PolynomialTests.cpp  analysis_test.cpp
Polynomials/: GroebnerBasis.cpp  GroebnerBasis.h  Lagrange.h  LagrangeSelector.cpp  LagrangeSelector.h  LinearInterpolationProblem.cpp  LinearInterpolationProblem.h  Multiindex.cpp  Multiindex.h  polynomial.cpp  polynomial.h
test/: ConvexHullTest.cpp  GroebnerTest.cpp  LinearInterpolationProblemTests.cpp  MultiindexTests.cpp  Neeza_scratch.cpp  PointTests.cpp  PolynomialTests.cpp  analysis_test.cpp
utilities/: analysis.cpp  analysis.h  kbnsum.cpp  kbnsum.h  utilities.cpp  utilities.h
